--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div class="col-md-8">
 
           
-            <h1>Welcom to Raj Harun's Website</h1>
+            <h1>Welcom to Raj Shafaya Harun's Website</h1>
             <p>Hello eveyone, my name is Raj Shafaya Harun. You can call me by Raj. I'm a school student. <br> I'm in class SIX. Cars are my passion.</p>
             <p>Click to download my resume</p>
             <br>
